# ccase-check

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md
.github/workflows/: pre-commit-action.yml
include/: cases.h  contexts.h  convert.h  heterogeneous_lookup.h  parse_args.h  scanner.h
src/: cases.cpp  convert.cpp  main.cpp  parse_args.cpp  scanner.cpp
